www/css/cintient.css
/* @override 
	http://cintient/dashboard/css/new.css
	http://cintient/css/new.css
	http://cintient/project/new/css/new.css
	http://cintient/project/css/new.css
	http://cintient/settings/css/new.css
	http://cintient/project/history/css/new.css
	http://cintient/project/edit/css/new.css
	http://cintient/project/history/css/cintient.css
*/

/* @group Top Bar */

.topbar .fill
{
  padding-top: 2px;
  border-bottom: 1px solid #000;
  background: #222;
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#333', endColorstr='#111');
  background: -webkit-gradient(linear, left top, left bottom, color-stop(0, #7f7f7f), color-stop(0.25, #555), color-stop(0.51, #444), color-stop(0.51, #333), color-stop(0.76, #222), color-stop(1, #111));
  background: -moz-linear-gradient(top, #7f7f7f 0%, #555 25%, #444 51%, #333 51%, #222 76%, #111 100%);
          box-shadow: 0px 1px 7px #111;
     -moz-box-shadow: #111 0px 1px 7px;
  -webkit-box-shadow: #111 0px 1px 7px;
  color: #797979;
  opacity: .96;
}

.topbar .fill .container
{
  height: 34px;
  text-shadow: #000 1px 1px 0px;
}

img#avatarImg
{
  float: left;
  width: 30px;
  height: 30px;
          box-shadow: 1px 1px 1px #111;
     -moz-box-shadow: #111 1px 1px 1px;
  -webkit-box-shadow: #111 1px 1px 1px;
  margin-top: -9px;
  margin-right: 8px;
}

#logoLettering
{
  color: rgb(230,230,230);
  text-shadow: #000 1px 1px 1px;
  clear: none;
  float: left;
  width: 120px;
  margin-top: -3px;
  margin-left: -16px;
  padding-left: 8px;
}

#logoDropdown.dropdown-toggle:after
{
  /* Disable Bootstrap's ::after dropdown arrow, so that we can have our own exactly the same, but manipulatable through JS (::after content is not in the DOM, hence cannot be manipulated) */
  display: none;
}
#logoDropdown .dropdownArrow
{
  visibility: hidden;
}

ul.nav, ul.secondary-nav
{
  font-size: 1.26em;
}

ul.dropdown-menu
{
  /* This is just the menu, not including the link that opened it */
  margin-top: -5px; /* place the menu dropdown the pixel right after the bar */
}

.topbar .menuLinks > ul > li > a
{
  height: 25px;
  float: left;
  padding: 0px;
  margin-top: -2px;
  padding-top: 12px;
  padding-left: 10px;
  padding-right: 10px;
}

#sectionContent
{
  /* This selector is mainly for FF to behave */
  float: left;
  width: 100%;
  margin: 0px;
  padding: 0px;
}

/* @end */






/* @group Defaults */

html, body
{
  background-color: #eee;
}

body
{
  padding-top: 37px; /* container below topbar */
}

.container
{
  /* Trick to make all positions within this container relative to this container */
  position: relative;
}

.container > footer
{
  margin-top: 10px;
  padding-bottom: 40px;
  float: left;
  width: 100%;
}

.container > footer p
{
  line-height: 1.2em;
  text-align: center; /* center align it with the container */
}

.mainContent { /* The white background content wrapper */
  background-color: #fff;
  padding: 20px;
  margin: 0 -20px; /* negative indent the amount of the padding to maintain the grid system */
  -webkit-border-radius: 0 0 6px 6px;
     -moz-border-radius: 0 0 6px 6px;
          border-radius: 0 0 6px 6px;
  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15);
     -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15);
          box-shadow: 0 1px 2px rgba(0,0,0,.15);
  float: left;
  width: 100%;
}
      
.page-header { /* Page header tweaks */
  background-color: #f5f5f5;
  padding: 20px 20px 10px;
  margin: -20px -20px 20px;
}

.label.success
{
  background-color: rgb(124,196,0);
}
.label.important
{
  background-color: rgb(255,40,0);
}

.leftRow
{
  border-right: 1px solid #EEE;
}

.rightRow
{
  margin-left: 0;
  padding-left: 19px;
}
      
#alertPane
{
  z-index: 1000;
  position: absolute;
  width: 100%;
  line-height: 1.6em;
  font-size: 1.2em;
}

.alert-message
{
  margin-bottom: 2px;
          box-shadow: 0px 1px 4px #111;
     -moz-box-shadow: #111 0px 1px 4px;
  -webkit-box-shadow: #111 0px 1px 4px;
}

.alert-message a.close
{
  float: left;
  margin-right: 15px;
}



.activeElement
{
  background-color: rgba(0, 67, 138, 0.1);
}

.smoothHover
{
/* for small items, a quicker transition plays nicer with your eyes */
          transition: all 0.15s ease-in-out;
     -moz-transition: all 0.15s ease-in-out;
  -webkit-transition: all 0.15s ease-in-out;
  -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
	      border-radius: 4px;
}

.smoothHoverSmall
{
/* for small items, a quicker transition plays nicer with your eyes */
          transition: all 0.08s ease-in-out;
     -moz-transition: all 0.08s ease-in-out;
  -webkit-transition: all 0.08s ease-in-out;
  -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
	      border-radius: 4px;
}

.smoothHover:hover, .smoothHoverSmall:hover
{
  background-color: #eee;
  /*background-color: #F8F8F8;*/
  cursor: pointer;
}

footer
{
  margin-top: 0px;
  padding-top: 10px;
}
footer p, footer #installationStats
{
  /*letter-spacing: .20em;*/
  font-family: Syncopate, "Lucida Grande",Verdana,Arial,"Bitstream Vera Sans",sans-serif;
  text-align: center;
  clear: both;
  font-size: 7pt;
  line-height: 1.2em;
  color: #555;
  text-shadow: white 1px 1px 1px;
}

.page-header
{
  clear: both;
  float: left;
  width: 100%;
}
.page-header h1
{
  float: left;
}
.page-header h1 small
{
  /*color: gray;*/
  text-shadow: white 1px 1px 1px;
}
.page-header .label
{
  text-shadow: none;
}

#subSectionInclude
{
  clear: right;
  float: right;
  margin-top: 16px;
  font-size: 1em;
  text-shadow: white 1px 1px 1px;
  color: gray;
}
#subSectionInclude .label
{
  margin-right: 2px;
}

.dropdownArrow
{
  /* Copied from Bootstrap's own ::after */
  width: 0;
  height: 0;
  display: inline-block;
  text-indent: -99999px;
  vertical-align: top;
  margin-top: 8px;
  margin-left: 4px;
  border-left: 4px solid transparent;
  border-right: 4px solid transparent;
  border-top: 4px solid white;
  filter: alpha(opacity=50);
  -khtml-opacity: 0.5;
  -moz-opacity: 0.5;
  opacity: 0.5;
  content: "&darr;";
}
/* ... */

